# university-projects

./: .gitignore  README.md
Course work (signal analysis)/data/: Uvix_array.txt
Course work (signal analysis)/foreign/: signal_calculation.xlsx  start.sh
Course work (signal analysis)/source/: main.c  program.h
Kyrsach/: kyrsach.wxmx  main.c  massiv_t.txt  programm.h  start.sh
Laboratory work 4/: CMakeLists.txt
Laboratory work 4/source/methods/: eighth.c  fifth.c  seventh.c  sixth.c  third.c
Laboratory work 5/: CMakeLists.txt  Functions.h
Laboratory work 6/: datainput.txt
PZ03.2nd semestr/: MyFunction.h  main.c  output.txt
Practice work 3/: main.c
Practice work 4/: CMakeLists.txt  main.c
lb04/: System-Of-Solutions-Of-Quadratic-Equations  eighthMethod.c  fifthMethod.c  firstMethod.c  fourthMethod.c  main.c  menu.c  modifiedFourthMethod.c  ninthMethod.c  secondMethod.c  seventhMethod.c  sixthMethod.c  sosoqe.h  tenthMethod.c  thirdMethod.c
lr05/: MyFunction.h  output.txt  p  p01.c
lr06/: dataoutput.txt  lr06.c  lr06.h  p
pz04/: input  main.c  new_file  text
semester_1/Course work (signal analysis)/: CMakeLists.txt
semester_1/Laboratory work 5/: main.c
semester_1/Laboratory work 6/: CMakeLists.txt  mian.c
semester_1/Laboratory/Laboratory work 4/: CMakeLists.txt
semester_1/Laboratory/Laboratory work 4/headers/: sosoqe.h
semester_1/Laboratory/Laboratory work 4/source/: main.c
semester_1/Laboratory/Laboratory work 4/source/methods/: first.c  ninth.c  second.c  tenth.c
semester_1/Practice work 3/: CMakeLists.txt
(+22 files in other folders)
